src/App.css
* {
  margin: 0%;
  padding: 0%;
  box-sizing: border-box;
}
/* #root{
  background-color: white;
} */

.swiper {
  width: 100%;
  height: 100%;
  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.2);
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #fff;
  /* Center slide text vertically */
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiper-slide img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
#star {
  width: 80%;
}

.popup {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(107, 106, 106, 0.093);
  display: flex;
  justify-content: center;
  align-items: center;
}

.popupInner {
  background-color: #fff;
  padding: 20px;
  border-radius: 4px;
  box-shadow: 0 0 10px rgba(68, 66, 66, 0);
  position: relative;
}

.close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  border: none;
  background-color: transparent;
  font-size: 20px;
  cursor: pointer;
}

#threeDot {
  cursor: pointer;
}

#downloadBtnicon {
  width: 30px;
  height: 100%;
}
#GoogledownloadBtnicon {
  width: 30px;
  height: 100%;
}
.swiper-pagination {
  /* display: none; */
}

